[tool.poetry]
name = "P service"
version = "0.1.0"
description = ""
authors = ["DM"]
readme = "README.md"
packages = [{include = "service"}]


[tool.poetry.dependencies]
python = "^3.10.4"
fastapi = "0.75.0"
uvicorn = "0.17.6"


[tool.poetry.group.dev.dependencies]
pytest = "7.1.1"
pytest-asyncio = "0.19.0"
coverage = "6.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
